# AI-Software-Defined-Radio

./: .env  .env.cloud.example  .env.example  Makefile  README.md  pyproject.toml  requirements-cloud.txt  requirements-edge.txt  requirements.txt
cloud/: __init__.py  main.py
cloud/feature-store/: schema.sql
cloud/ingest-api/: __init__.py  alerts.py  main.py
cloud/llm-copilot/: __init__.py  query_engine.py  response_generator.py  server.py
cloud/model-serving/: __init__.py  phy_detector.py  server.py
cloud/object-store/: __init__.py  minio_client.py
cloud/stream/: __init__.py  nats_config.py
cloud/web-ui/: incident_export.py  server.py
cloud/web-ui/static/: app.js
cloud/web-ui/templates/: index.html
deploy/grafana/provisioning/dashboards/: aerosentry_overview.json  aerosentry_phy.json  dashboards.yml
deploy/grafana/provisioning/datasources/: datasources.yml
deploy/kubernetes/: configmap.yaml  ingest-api.yaml  kustomization.yaml  model-serving.yaml  namespace.yaml  nats.yaml  timescaledb.yaml  web-ui.yaml
disaster/: __init__.py
disaster/local-summarizer/: __init__.py  offline_store.py  summarizer.py
disaster/mesh-relay/: __init__.py  meshtastic_relay.py
docker/: Dockerfile.api  Dockerfile.copilot  Dockerfile.edge  Dockerfile.mesh  Dockerfile.models  Dockerfile.voice  Dockerfile.webui  docker-compose.cloud.yml  docker-compose.edge.yml
edge/: __init__.py  main.py
edge/adsb-decode/: __init__.py  readsb_wrapper.py
edge/edge-inference/: __init__.py  anomaly_model.py  rules.py
edge/edge-store/: __init__.py  parquet_manager.py
edge/features/: __init__.py  beast_ingest.py  data_source.py  opensky_client.py  phy_features.py  track_features.py
edge/iq-capture/: __init__.py  iq_capture.py
edge/voice-capture/: __init__.py  entity_extraction.py  transcription.py  vhf_capture.py
models/: .gitkeep
scripts/: run_evaluation.py  setup_db.py  test_opensky.py
shared/: __init__.py
shared/docs/: COMPLIANCE.md  THREAT_MODEL.md
shared/eval/: __init__.py  metrics.py  opensky_loader.py  synthetic_attacks.py
shared/schemas/: adsb_message.proto  config.py
tests/: __init__.py  conftest.py
tests/integration/: __init__.py  test_anomaly_detection.py  test_ingest_pipeline.py
tests/unit/: test_entity_extraction.py  test_rules.py
web/: package-lock.json  package.json
web/src/app/: GlobeExperience.tsx  globals.css  page.tsx
web/src/app/api/opensky/: route.ts
web/src/app/components/: AircraftLayer.tsx  CountryLabels.tsx  Globe.tsx  InteractionLayer.tsx
web/src/app/hooks/: useAircraftData.ts
